kubernetes/manifest_patch/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: app-2-ip
    networking.gke.io/managed-certificates: certificate
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: frontend-config
spec:
  backend:
    serviceName: app-service
    servicePort: 80
